# week2-imgGallery

./: .env.example  .gitignore  README.md  compose.yaml  package-lock.json
backend/: .cache.json  Dockerfile  Makefile  pyproject.toml
backend/src/: start.py
backend/src/backend/: main.py
backend/src/backend/config/: database.py  initial_data.py  minio.py  qdrant.py  replicate.py  settings.py
backend/src/backend/controllers/: __init__.py  albums_controller.py  auth_controller.py  collections_controller.py  images_controller.py  site_controller.py  user_controller.py
backend/src/backend/middleware/: __init__.py  auth.py
backend/src/backend/models/: __init__.py  base.py  initial_data.py  models.py
backend/src/backend/models/dtos/: __init__.py  auth.py  collection.py  image.py  site.py
backend/src/backend/services/: __init__.py  album_service.py  blog_service.py  category_service.py  comment_service.py  image_service.py  like_service.py  permission_service.py  session_service.py  site_service.py  tag_service.py  user_service.py
backend/src/backend/utils/: __init__.py  auth.py  exceptions.py
frontend/: Dockerfile  index.html  orval.config.cjs  package-lock.json  package.json  tailwind.config.js  update-endpoints.sh  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: axios.ts  generated.ts
frontend/src/components/: AlbumForm.tsx  Albums.tsx  CollectionForm.tsx  Comments.tsx  Header.tsx  Layout.tsx  Photos.tsx  Thumbnail.tsx  UserManager.tsx
frontend/src/pages/: AddAlbum.tsx  AddPhotoToGallery.tsx  AlbumDetailPage.tsx  AllAlbums.tsx  (+4 more)
(+1 files in other folders)
